[package]
name = "excel_column_id"
version = "0.1.4"
license = "MIT"
authors = ["Bob <nottxy@gmail.com>"]
description = "Convert to Excel Column name from number"
documentation = "https://docs.rs/excel_column_id"
repository = "https://github.com/nottxy/excel_column_id"
keywords = ["excel"]
edition = "2018"

[features]
with-serde = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }